--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
-name: markscribe
+name: Update README
 
 on:
   push:
-  workflow_dispatch:
   schedule:
     - cron: "0 */1 * * *"
 
@@ -11,20 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@master
 
-      - name: Generate README
-        uses: muesli/readme-scribe@master
+      - uses: muesli/readme-scribe@master
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
         with:
-          template: 'README.gtpl'
-          writeTo: 'README.md'
+          template: "templates/README.md.tpl"
+          writeTo: "README.md"
 
-      - name: Commit README
-        uses: stefanzweifel/git-auto-commit-action@v4
+      - uses: stefanzweifel/git-auto-commit-action@v4
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          commit_message: 'markscribe: update README.md'
+          commit_message: Update generated README
+          branch: main
+          commit_user_name: readme-scribe 🤖
+          commit_user_email: actions@github.com
+          commit_author: readme-scribe 🤖 <actions@github.com>
