--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
         with:
-          template: "README.md.tpl"
+          template: "README.tpl"
           writeTo: "README.md"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
