--- a/.github/workflows/markscribe.yml
+++ b/.github/workflows/markscribe.yml
@@ -1,4 +1,4 @@
-name: markscribe
+name: Update README
 
 on:
   push:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
 
       - uses: muesli/readme-scribe@master
         env:
@@ -19,12 +19,11 @@ jobs:
           template: "README.tpl"
           writeTo: "README.md"
 
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          message: "Update generated README"
+          author_name: "readme-scribe 🤖"
+          author_email: "actions@github.com"
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-        with:
-          commit_message: Update generated README
-          branch: main
-          commit_user_name: readme-scribe 🤖
-          commit_user_email: actions@github.com
-          commit_author: readme-scribe 🤖 <actions@github.com>
