--- a/.github/workflows/markscribe.yml
+++ b/.github/workflows/markscribe.yml
@@ -22,8 +22,7 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
-          message: "Update generated README"
+          message: Update generated README
           author_name: "readme-scribe 🤖"
           author_email: "actions@github.com"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          github_token: ${{ secrets.GH_PAT }}
