--- a/.github/workflows/markscribe.yml
+++ b/.github/workflows/markscribe.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   markscribe:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@master
 
@@ -19,9 +18,14 @@ jobs:
           template: "templates/README.md.tpl"
           writeTo: "README.md"
 
+      - uses: actions/upload-artifact@v1
+        with:
+          name: README.md
+          path: README.md
+
       - uses: stefanzweifel/git-auto-commit-action@v4
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
         with:
           commit_message: Update generated README
           branch: main
